fix error with bar on Safari mobile browser

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,7 @@
-html {
-  height: -webkit-fill-available;
-}
-
 body {
   margin: 0;
   width: 100vw;
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
+  height: 100%;
   overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
